--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-multi-carousel": "^2.8.4",
 		"react-router-dom": "^6.21.0",
 		"react-scripts": "5.0.1",
+		"tailwindcss-gradients": "^3.0.0",
 		"web-vitals": "^2.1.4",
 		"yup": "^1.3.2"
 	},
